# kalshi-tools

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
src/kalshi_lp/: __init__.py  analyze_cli.py  cli.py  cli_utils.py  debug_cli.py  incentive_analyzer.py  kalshi_client.py  logging_utils.py  lp_math.py  money.py  onesided_cli.py  orderbook_utils.py  scale_cli.py  snapshot_cli.py
src/kalshi_lp/commands/: __init__.py  analyze.py  debug.py  onesided.py  scale.py  snapshot.py  validators.py
tests/: test_logging.py  test_money.py  test_onesided.py  test_properties.py
