[project]
name = "kalshi-market-maker"
version = "0.1.0"
description = "Tooling for Kalshi"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "kalshi-python-async>=3.1.0",
    "matplotlib>=3.10.8",
    "python-dotenv>=1.2.1",
    "urllib3>=2.6.2",
]

[dependency-groups]
dev = [
    "hypothesis>=6.148.7",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "ty>=0.0.1a34",
]

[project.scripts]
kalshi-lp = "kalshi_lp.cli:main"

[tool.uv]
package = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I", "Q", "ASYNC", "COM", "RUF"]
ignore = ["COM812"]
